--- a/Exercises/Week10/selenium_basic.ipynb
+++ b/Exercises/Week10/selenium_basic.ipynb
@@ -26,7 +26,7 @@
     }
    ],
    "source": [
-    "driver = webdriver.Chrome(r\"C:\\Users\\admin\\Downloads\\chromedriver.exe\")"
+    "driver = webdriver.Chrome(r\"C:\\Users\\admin\\Downloads\\chromedriver_win32\\chromedriver.exe\")"
    ]
   },
   {
